--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,15 +1,13 @@
-.App {
-  text-align: center;
+
+:root {
+  --app-background-color: #2d2d2d;
+  --text-color: #828282;
+
 }
 
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
+/* irrelevant for now */
 .App-title {
   font-size: 1.5em;
 }
