--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,8 +2,22 @@
 :root {
   --app-background-color: #2d2d2d;
   --text-color: #828282;
+  --text-box-background: #3c3c3c;
+  --text-input-color: #c8c8c8;
+  
 
 }
+
+#web-display {
+  /* border: 15px solid lightblue; */
+  background-image: url(../../Photos/filmcamera.jpg);
+  background-size: cover;
+  /* background-repeat: no-repeat; */
+  /* display: flex; */
+  /* flex-direction: column; */
+
+}
+
 
 
 
