--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -11,7 +11,7 @@
       'blank header'
       'sidebar main';
     padding: 0 1%;
-    background-color: var(--app-background-color);
+    /* background-color: var(--app-background-color); */
     color: var(--text-color);
     }
   
@@ -43,7 +43,9 @@
   .movieImage {
     width: 150px;
     height: 220px;
-    border: 1px solid silver;
+    border: 1px solid darkred;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px darkred;
   }
   
   /* MOVIE DISPLAY PAGE */
